--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "express": "^4.17.1",
     "socket.io": "^3.1.2"
   },
+  "engines": {
+    "node": "14.x"
+  },
   "devDependencies": {
     "nodemon": "^2.0.7"
   }
